--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css">
 </head>
+
 <body>
-    
+
+    <header class="bg-[#6425CB] p-[30px_150px] text-white">
+        <div class="flex justify-between items-center mb-[30px]">
+            <div class="flex gap-[30px]">
+                <div class="flex gap-[10px]">
+                    <img src="./images/Frame (31).png" alt="">
+                    <p>+1800-123-4567</p>
+                </div>
+                <div class="flex gap-[10px]">
+                    <img src="./images/Frame (32).png" alt="">
+                    <p>info@brandexponents.com</p>
+                </div>
+            </div>
+            <div class="flex gap-[20px]">
+                <img src="./images/Frame (34).png" alt="">
+                <img src="./images/Frame (35).png" alt="">
+                <img src="./images/Frame (36).png" alt="">
+                <img src="./images/Frame (37).png" alt="">
+            </div>
+        </div>
+
+        <div class="bg-white p-[30px] rounded-[10px] flex justify-between items-center">
+
+            <img src="./images/IMAGE (59).png" alt="">
+            <div class="text-black flex gap-[50px]">
+                <p>Home</p>
+                <p>Why SEO?</p>
+                <p>Services</p>
+                <p>Team</p>
+                <p>Pricing</p>
+                <p>Blog</p>
+                <p>Contact</p>
+            </div>
+            <button class="p-[10px_30px] rounded-[20px] bg-[#F4AB00]">Enquiry</button>
+
+        </div>
+
+        <div class="flex justify-between items-center my-[50px]">
+            <div>
+                <h1 class="text-[60px] ">We’re strategic
+                    <span class="text-[#F4AB00]">SEO Marketing</span>
+                    agency.</h1>
+                    <p class="my-[30px]">Spyro is a powerful landing pages builder WP theme that lets you build high converting landing pages using its specially crafted modules clubbed inside.</p>
+                    <button class="p-[10px_30px] rounded-[20px] bg-[#F4AB00]">Explore Now</button>
+            </div>
+            <img src="./images/IMAGE (60).png" alt="">
+        </div>
+    </header>
+
 </body>
+
 </html>
