--- a/src/index.html
+++ b/src/index.html
@@ -50,13 +50,94 @@
             <div>
                 <h1 class="text-[60px] ">We’re strategic
                     <span class="text-[#F4AB00]">SEO Marketing</span>
-                    agency.</h1>
-                    <p class="my-[30px]">Spyro is a powerful landing pages builder WP theme that lets you build high converting landing pages using its specially crafted modules clubbed inside.</p>
-                    <button class="p-[10px_30px] rounded-[20px] bg-[#F4AB00]">Explore Now</button>
+                    agency.
+                </h1>
+                <p class="my-[30px]">Spyro is a powerful landing pages builder WP theme that lets you build high
+                    converting landing pages using its specially crafted modules clubbed inside.</p>
+                <button class="p-[10px_30px] rounded-[20px] bg-[#F4AB00]">Explore Now</button>
             </div>
             <img src="./images/IMAGE (60).png" alt="">
         </div>
     </header>
+
+    <div class="fixed bottom-[100px] right-[50px]">
+        <img src="./images/Frame (38).png" alt="">
+    </div>
+
+    <div class="section1 flex justify-between items-center p-[30px_150px] text-[#604B83]">
+        <img src="./images/IMAGE (61).png" alt="" class="mr-[100px]">
+        <div>
+            <p class="text-[#F4AB00]">Looking for best SEO results?</p>
+            <h2 class="text-[48px] mb-[20px]">Appear on the front page of Google!</h2>
+            <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting landing
+                pages using its specially crafted modules clubbed inside.</p>
+
+            <div class="flex gap-[50px] mt-[30px]">
+                <div>
+                    <div class="flex items-center gap-[10px] mb-[10px]">
+                        <img src="./images/IMAGE (62).png" alt="">
+                        <p>Connect with Customers</p>
+                    </div>
+                    <div class="flex items-center gap-[10px] mb-[10px]">
+                        <img src="./images/IMAGE (62).png" alt="">
+                        <p>Connect with Customers</p>
+                    </div>
+                    <div class="flex items-center gap-[10px] mb-[10px]">
+                        <img src="./images/IMAGE (62).png" alt="">
+                        <p>Connect with Customers</p>
+                    </div>
+                    <div class="flex items-center gap-[10px] mb-[10px]">
+                        <img src="./images/IMAGE (62).png" alt="">
+                        <p>Connect with Customers</p>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="flex items-center gap-[10px] mb-[10px]">
+                        <img src="./images/IMAGE (62).png" alt="">
+                        <p>Connect with Customers</p>
+                    </div>
+                    <div class="flex items-center gap-[10px] mb-[10px]">
+                        <img src="./images/IMAGE (62).png" alt="">
+                        <p>Connect with Customers</p>
+                    </div>
+                    <div class="flex items-center gap-[10px] mb-[10px]">
+                        <img src="./images/IMAGE (62).png" alt="">
+                        <p>Connect with Customers</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="flex justify-between p-[30px_150px] items-center">
+        <div>
+            <p class="text-[#F4AB00]">Why we’re the best in Industry?</p>
+            <h2 class="text-[48px] mb-[20px]">Top reasons for choosing Spyro SEO agency</h2>
+            <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting landing
+                pages using its specially crafted modules clubbed inside.</p>
+            <div class="flex items-center gap-[40px] mt-[40px]">
+                <div class="flex gap-[10px] items-center bg-[#F6F1FF] rounded-[15px] p-[20px_60px]">
+                    <img src="./images/Frame (39).png" alt="">
+                    <div>
+                        <h3 class="text-[24px]">98.5%</h3>
+                        <p>Satisfaction</p>
+                    </div> 
+                </div>
+
+                <div class="flex gap-[10px] items-center bg-[#F6F1FF] rounded-[15px] p-[20px_60px]">
+                    <img src="./images/Frame (39).png" alt="">
+                    <div>
+                        <h3 class="text-[24px]">98.5%</h3>
+                        <p>Satisfaction</p>
+                    </div> 
+                </div>
+            </div>
+        </div>
+        <img src="./images/IMAGE (63).png" alt="">
+    </div>
 
 </body>
 
