--- a/src/index.html
+++ b/src/index.html
@@ -139,6 +139,95 @@
         <img src="./images/IMAGE (63).png" alt="">
     </div>
 
+    <div class="section2 bg-[#6425CB] p-[90px_150px] text-white flex justify-center items-center ">
+        <div class="w-[33%] mr-[50px]">
+            <h2 class="text-[42px] mb-[20px]">Conversion rate optimization</h2>
+            <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting landing pages using its specially crafted modules clubbed inside.</p>
+            <button class="p-[10px_30px] bg-[#F4AB00] rounded-[20px] mt-[20px]">Get a quote</button>
+        </div>
+        <div class="text-[#2C1258] flex gap-[30px] w-[60%]">
+            <div>
+                <div class="bg-white p-[30px] mb-[30px]">
+                    <img src="./images/IMAGE (64).png" alt="">
+                    <h3 class="text-[20px] my-[20px]">CRO Techniques</h3>
+                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting pages.</p>
+                </div>
+                 <div class="bg-white p-[30px]">
+                    <img src="./images/IMAGE (64).png" alt="">
+                    <h3 class="text-[20px] my-[20px]">CRO Techniques</h3>
+                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting pages.</p>
+                </div>
+            </div>
+
+            <div>
+                <div class="bg-white p-[30px] my-[30px]">
+                    <img src="./images/IMAGE (64).png" alt="">
+                    <h3 class="text-[20px] my-[20px]">CRO Techniques</h3>
+                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting pages.</p>
+                </div>
+                 <div class="bg-white p-[30px]">
+                    <img src="./images/IMAGE (64).png" alt="">
+                    <h3 class="text-[20px] my-[20px]">CRO Techniques</h3>
+                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting pages.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="sec2 p-[90px_150px] text-[#2C1258]">
+        <h2 class="text-[42px] text-center mb-[30px] m-auto">Our Services</h2>
+        <div class="flex justify-between items-center">
+
+            <div class="text-center  bg-[#F4AB00] inline-block text-white p-[20px] rounded-[10px]">
+                <img src="./images/Frame (40).png" alt="" class="m-auto mb-[10px]">
+                <p>SEO & Marketing</p>
+            </div>
+
+             <div class="text-center  inline-block p-[20px] rounded-[10px] shadow-2xl">
+                <img src="./images/Frame (40).png" alt="" class="m-auto mb-[10px]">
+                <p>SEO & Marketing</p>
+            </div>
+            <div class="text-center  inline-block p-[20px] rounded-[10px] shadow-2xl">
+                <img src="./images/Frame (40).png" alt="" class="m-auto mb-[10px]">
+                <p>SEO & Marketing</p>
+            </div>
+            <div class="text-center  inline-block p-[20px] rounded-[10px] shadow-2xl">
+                <img src="./images/Frame (40).png" alt="" class="m-auto mb-[10px]">
+                <p>SEO & Marketing</p>
+            </div>
+            <div class="text-center  inline-block p-[20px] rounded-[10px] shadow-2xl">
+                <img src="./images/Frame (40).png" alt="" class="m-auto mb-[10px]">
+                <p>SEO & Marketing</p>
+            </div>
+            <div class="text-center  inline-block p-[20px] rounded-[10px] shadow-2xl">
+                <img src="./images/Frame (40).png" alt="" class="m-auto mb-[10px]">
+                <p>SEO & Marketing</p>
+            </div>
+        </div>
+
+        <div class="flex justify-between items-center mt-[50px]">
+            <div class="text-[#2C1258] w-[30%]">
+                <h2 class="text-[34px]">SEO & Marketing</h2>
+                <p class="my-[20px]">Spyro WordPress theme is insanely flexible and amazingly easy to use. This alone would be enough for a 5 star rating on top of a great tool is even better customer support.</p>
+                <div class="flex items-center gap-[10px] my-[10px]">
+                    <img src="./images/IMAGE (66).png" alt="">
+                    <p>Increase the Organic Traffic</p>
+                </div>
+
+                <div class="flex items-center gap-[10px] mb-[10px]">
+                    <img src="./images/IMAGE (66).png" alt="">
+                    <p>Increase the Organic Traffic</p>
+                </div>
+
+                <div class="flex items-center gap-[10px] mb-[10px]">
+                    <img src="./images/IMAGE (66).png" alt="">
+                    <p>Increase the Organic Traffic</p>
+                </div>
+            </div>
+            <img src="./images/IMAGE (65).png" alt="">
+        </div>
+    </div>
+
 </body>
 
 </html>
