--- a/src/index.html
+++ b/src/index.html
@@ -228,6 +228,94 @@
         </div>
     </div>
 
+    <div class="sec3 bg-[#421B81] p-[50px_150px] text-white text-center">
+        <h2 class="text-[42px]">How <span class="text-[#F4AB00]">SEO</span> works step <br> by step?</h2>
+        <p class="my-[20px]">The best part of being a part of this community</p>
+        <div class="flex gap-[40px] items-center justify-center mt-[60px]">
+            <img src="./images/IMAGE (67).png" alt="">
+            <hr class="w-[300px] h-[2px] border-0 bg-[#FFFFFF4D]">
+            <img src="./images/Group (4).png" alt="">
+            <hr class="w-[300px] h-[2px] border-0 bg-[#FFFFFF4D]">
+            <img src="./images/IMAGE (68).png" alt="">
+
+        </div>
+
+        <div class="flex justify-center mt-[20px] gap-[240px]">
+            <div class="w-[200px]">
+                <h3 class="text-22px mb-[20px]">Business Analysis</h3>
+                <p class="">Spyro is a landing page WP theme, that lets you build stunning high performance.</p>
+            </div>
+
+             <div class="w-[200px]">
+                <h3 class="text-22px mb-[20px]">Business Analysis</h3>
+                <p class="">Spyro is a landing page WP theme, that lets you build stunning high performance.</p>
+            </div>
+
+             <div class="w-[200px]">
+                <h3 class="text-22px mb-[20px]">Business Analysis</h3>
+                <p class="">Spyro is a landing page WP theme, that lets you build stunning high performance.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="sec3 p-[90px_150px] text-[#2C1258]">
+        <h2 class="text-[42px] text-center mb-[20px]">Marketing Team</h2>
+        <p class="text-center mb-[50px]">The most wonderful people our company</p>
+
+        <div class="flex justify-between mb-[80px]">
+            <div class="flex gap-[20px] items-center">
+                <img src="./images/IMAGE (69).png" alt="">
+                <div>
+                    <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
+                    <p>SEO Manager</p>
+                </div>
+            </div>
+
+             <div class="flex gap-[20px] items-center">
+                <img src="./images/IMAGE (69).png" alt="">
+                <div>
+                    <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
+                    <p>SEO Manager</p>
+                </div>
+            </div>
+
+             <div class="flex gap-[20px] items-center">
+                <img src="./images/IMAGE (69).png" alt="">
+                <div>
+                    <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
+                    <p>SEO Manager</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="flex justify-between ">
+            <div class="flex gap-[20px] items-center">
+                <img src="./images/IMAGE (69).png" alt="">
+                <div>
+                    <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
+                    <p>SEO Manager</p>
+                </div>
+            </div>
+
+             <div class="flex gap-[20px] items-center">
+                <img src="./images/IMAGE (69).png" alt="">
+                <div>
+                    <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
+                    <p>SEO Manager</p>
+                </div>
+            </div>
+
+             <div class="flex gap-[20px] items-center">
+                <img src="./images/IMAGE (69).png" alt="">
+                <div>
+                    <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
+                    <p>SEO Manager</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
