--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
                     <div>
                         <h3 class="text-[24px]">98.5%</h3>
                         <p>Satisfaction</p>
-                    </div> 
+                    </div>
                 </div>
 
                 <div class="flex gap-[10px] items-center bg-[#F6F1FF] rounded-[15px] p-[20px_60px]">
@@ -132,7 +132,7 @@
                     <div>
                         <h3 class="text-[24px]">98.5%</h3>
                         <p>Satisfaction</p>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -142,7 +142,8 @@
     <div class="section2 bg-[#6425CB] p-[90px_150px] text-white flex justify-center items-center ">
         <div class="w-[33%] mr-[50px]">
             <h2 class="text-[42px] mb-[20px]">Conversion rate optimization</h2>
-            <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting landing pages using its specially crafted modules clubbed inside.</p>
+            <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting landing
+                pages using its specially crafted modules clubbed inside.</p>
             <button class="p-[10px_30px] bg-[#F4AB00] rounded-[20px] mt-[20px]">Get a quote</button>
         </div>
         <div class="text-[#2C1258] flex gap-[30px] w-[60%]">
@@ -150,12 +151,14 @@
                 <div class="bg-white p-[30px] mb-[30px]">
                     <img src="./images/IMAGE (64).png" alt="">
                     <h3 class="text-[20px] my-[20px]">CRO Techniques</h3>
-                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting pages.</p>
+                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting
+                        pages.</p>
                 </div>
-                 <div class="bg-white p-[30px]">
+                <div class="bg-white p-[30px]">
                     <img src="./images/IMAGE (64).png" alt="">
                     <h3 class="text-[20px] my-[20px]">CRO Techniques</h3>
-                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting pages.</p>
+                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting
+                        pages.</p>
                 </div>
             </div>
 
@@ -163,12 +166,14 @@
                 <div class="bg-white p-[30px] my-[30px]">
                     <img src="./images/IMAGE (64).png" alt="">
                     <h3 class="text-[20px] my-[20px]">CRO Techniques</h3>
-                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting pages.</p>
+                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting
+                        pages.</p>
                 </div>
-                 <div class="bg-white p-[30px]">
+                <div class="bg-white p-[30px]">
                     <img src="./images/IMAGE (64).png" alt="">
                     <h3 class="text-[20px] my-[20px]">CRO Techniques</h3>
-                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting pages.</p>
+                    <p>Spyro is a powerful landing pages builder WordPress theme that lets you build high converting
+                        pages.</p>
                 </div>
             </div>
         </div>
@@ -183,7 +188,7 @@
                 <p>SEO & Marketing</p>
             </div>
 
-             <div class="text-center  inline-block p-[20px] rounded-[10px] shadow-2xl">
+            <div class="text-center  inline-block p-[20px] rounded-[10px] shadow-2xl">
                 <img src="./images/Frame (40).png" alt="" class="m-auto mb-[10px]">
                 <p>SEO & Marketing</p>
             </div>
@@ -208,7 +213,8 @@
         <div class="flex justify-between items-center mt-[50px]">
             <div class="text-[#2C1258] w-[30%]">
                 <h2 class="text-[34px]">SEO & Marketing</h2>
-                <p class="my-[20px]">Spyro WordPress theme is insanely flexible and amazingly easy to use. This alone would be enough for a 5 star rating on top of a great tool is even better customer support.</p>
+                <p class="my-[20px]">Spyro WordPress theme is insanely flexible and amazingly easy to use. This alone
+                    would be enough for a 5 star rating on top of a great tool is even better customer support.</p>
                 <div class="flex items-center gap-[10px] my-[10px]">
                     <img src="./images/IMAGE (66).png" alt="">
                     <p>Increase the Organic Traffic</p>
@@ -246,12 +252,12 @@
                 <p class="">Spyro is a landing page WP theme, that lets you build stunning high performance.</p>
             </div>
 
-             <div class="w-[200px]">
+            <div class="w-[200px]">
                 <h3 class="text-22px mb-[20px]">Business Analysis</h3>
                 <p class="">Spyro is a landing page WP theme, that lets you build stunning high performance.</p>
             </div>
 
-             <div class="w-[200px]">
+            <div class="w-[200px]">
                 <h3 class="text-22px mb-[20px]">Business Analysis</h3>
                 <p class="">Spyro is a landing page WP theme, that lets you build stunning high performance.</p>
             </div>
@@ -271,7 +277,7 @@
                 </div>
             </div>
 
-             <div class="flex gap-[20px] items-center">
+            <div class="flex gap-[20px] items-center">
                 <img src="./images/IMAGE (69).png" alt="">
                 <div>
                     <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
@@ -279,7 +285,7 @@
                 </div>
             </div>
 
-             <div class="flex gap-[20px] items-center">
+            <div class="flex gap-[20px] items-center">
                 <img src="./images/IMAGE (69).png" alt="">
                 <div>
                     <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
@@ -297,7 +303,7 @@
                 </div>
             </div>
 
-             <div class="flex gap-[20px] items-center">
+            <div class="flex gap-[20px] items-center">
                 <img src="./images/IMAGE (69).png" alt="">
                 <div>
                     <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
@@ -305,7 +311,7 @@
                 </div>
             </div>
 
-             <div class="flex gap-[20px] items-center">
+            <div class="flex gap-[20px] items-center">
                 <img src="./images/IMAGE (69).png" alt="">
                 <div>
                     <h3 class="text-[20px] font-bold">Jonathan Kent</h3>
@@ -314,6 +320,154 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="bg-[#6425CB] p-[50px_150px] text-white">
+        <h2 class="text-center text-[42px] mb-[20px]">Pricing & Plans</h2>
+        <p class="text-center mb-[50px]">We offer best price in the market</p>
+
+        <div class="flex justify-center gap-[40px]">
+            <div class="bg-white text-[#6425CB] p-[40px] inline-block w-[350px] rounded-[20px]">
+                <p class="text-[#F4AB00] text-[22px] text-center">Silver</p>
+                <img src="./images/Frame (41).png" alt="" class=" m-auto">
+
+                <div class="flex items-center gap-[20px] my-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (71).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (71).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (71).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <button class="border-[#2C1258] border-[2px] bg-transparent p-[10px_30px] mt-[30px] block m-auto rounded-[30px]">Get Started</button>
+            </div>
+
+            <div class="bg-white text-[#6425CB] p-[40px] inline-block w-[350px] rounded-[20px]">
+                <p class="text-[#F4AB00] text-[22px] text-center">Gold</p>
+                <img src="./images/Frame (42).png" alt="" class=" m-auto">
+
+                <div class="flex items-center gap-[20px] my-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (71).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (71).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (71).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <button class="bg-[#F4AB00] text-white p-[10px_30px] mt-[30px] block m-auto rounded-[30px]">Get Started</button>
+            </div>
+
+            <div class="bg-white text-[#6425CB] p-[40px] inline-block w-[350px] rounded-[20px]">
+                <p class="text-[#F4AB00] text-[22px] text-center">Platinum</p>
+                <img src="./images/Frame (43).png" alt="" class=" m-auto">
+
+                <div class="flex items-center gap-[20px] my-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (70).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (71).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (71).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <div class="flex items-center gap-[20px] mb-[20px]">
+                    <img src="./images/IMAGE (71).png" alt="">
+                    <p>Top 10 Ranking Guarantee</p>
+                </div>
+
+                <button class="border-[#2C1258] border-[2px] bg-transparent p-[10px_30px] mt-[30px] block m-auto rounded-[30px]">Get Started</button>
+            </div>
+        </div>
     </div>
 
 </body>
