--- a/src/index.html
+++ b/src/index.html
@@ -470,6 +470,49 @@
         </div>
     </div>
 
+    <div class="sec5 p-[200px_250px] flex items-center justify-between">
+        <img src="./images/IMAGE (72).png" alt="">
+        <img src="./images/IMAGE (73).png" alt="">
+        <img src="./images/IMAGE (74).png" alt="">
+        <img src="./images/IMAGE (75).png" alt="">
+        <img src="./images/IMAGE (76).png" alt="">
+        <img src="./images/IMAGE (77).png" alt="">
+    </div>
+    
+
+    <div class="sec5 bg-[#E5D8FA] p-[90px_150px] text-[#2C1258] text-center">
+        <h2 class="text-[42px]">News & Case Studies</h2>
+        <p>We specialize in a wide array of marketing fields</p>
+
+        <div class="flex justify-between mt-[40px]">
+            <div class="bg-white inline-block">
+                <img src="./images/IMAGE (78).png" alt="">
+                <div class="p-[20px]">
+                <p>Reviews</p>
+                <h3 class="text-[22px] mt-[10px]">The Art and Science behind <br> Typography</h3>
+                </div>
+            </div>
+
+            <div class="bg-white inline-block">
+                <img src="./images/IMAGE (79).png" alt="">
+                <div class="p-[20px]">
+                <p>Reviews</p>
+                <h3 class="text-[22px] mt-[10px]">The Art and Science behind <br> Typography</h3>
+                </div>
+            </div>
+
+            <div class="bg-white inline-block">
+                <img src="./images/IMAGE (80).png" alt="">
+                <div class="p-[20px]">
+                <p>Reviews</p>
+                <h3 class="text-[22px] mt-[10px]">The Art and Science behind <br> Typography</h3>
+                </div>
+            </div>
+        </div>
+
+        <button class="text-[#2C1258] border-[#2C1258] border-[3px] bg-transparent p-[10px_40px] rounded-[30px] my-[40px]">See all posts</button>
+    </div>
+
 </body>
 
 </html>
