add all section

--- a/src/index.html
+++ b/src/index.html
@@ -371,7 +371,9 @@
                     <p>Top 10 Ranking Guarantee</p>
                 </div>
 
-                <button class="border-[#2C1258] border-[2px] bg-transparent p-[10px_30px] mt-[30px] block m-auto rounded-[30px]">Get Started</button>
+                <button
+                    class="border-[#2C1258] border-[2px] bg-transparent p-[10px_30px] mt-[30px] block m-auto rounded-[30px]">Get
+                    Started</button>
             </div>
 
             <div class="bg-white text-[#6425CB] p-[40px] inline-block w-[350px] rounded-[20px]">
@@ -418,7 +420,8 @@
                     <p>Top 10 Ranking Guarantee</p>
                 </div>
 
-                <button class="bg-[#F4AB00] text-white p-[10px_30px] mt-[30px] block m-auto rounded-[30px]">Get Started</button>
+                <button class="bg-[#F4AB00] text-white p-[10px_30px] mt-[30px] block m-auto rounded-[30px]">Get
+                    Started</button>
             </div>
 
             <div class="bg-white text-[#6425CB] p-[40px] inline-block w-[350px] rounded-[20px]">
@@ -465,7 +468,9 @@
                     <p>Top 10 Ranking Guarantee</p>
                 </div>
 
-                <button class="border-[#2C1258] border-[2px] bg-transparent p-[10px_30px] mt-[30px] block m-auto rounded-[30px]">Get Started</button>
+                <button
+                    class="border-[#2C1258] border-[2px] bg-transparent p-[10px_30px] mt-[30px] block m-auto rounded-[30px]">Get
+                    Started</button>
             </div>
         </div>
     </div>
@@ -478,7 +483,7 @@
         <img src="./images/IMAGE (76).png" alt="">
         <img src="./images/IMAGE (77).png" alt="">
     </div>
-    
+
 
     <div class="sec5 bg-[#E5D8FA] p-[90px_150px] text-[#2C1258] text-center">
         <h2 class="text-[42px]">News & Case Studies</h2>
@@ -488,29 +493,148 @@
             <div class="bg-white inline-block">
                 <img src="./images/IMAGE (78).png" alt="">
                 <div class="p-[20px]">
-                <p>Reviews</p>
-                <h3 class="text-[22px] mt-[10px]">The Art and Science behind <br> Typography</h3>
+                    <p>Reviews</p>
+                    <h3 class="text-[22px] mt-[10px]">The Art and Science behind <br> Typography</h3>
                 </div>
             </div>
 
             <div class="bg-white inline-block">
                 <img src="./images/IMAGE (79).png" alt="">
                 <div class="p-[20px]">
-                <p>Reviews</p>
-                <h3 class="text-[22px] mt-[10px]">The Art and Science behind <br> Typography</h3>
+                    <p>Reviews</p>
+                    <h3 class="text-[22px] mt-[10px]">The Art and Science behind <br> Typography</h3>
                 </div>
             </div>
 
             <div class="bg-white inline-block">
                 <img src="./images/IMAGE (80).png" alt="">
                 <div class="p-[20px]">
-                <p>Reviews</p>
-                <h3 class="text-[22px] mt-[10px]">The Art and Science behind <br> Typography</h3>
+                    <p>Reviews</p>
+                    <h3 class="text-[22px] mt-[10px]">The Art and Science behind <br> Typography</h3>
                 </div>
             </div>
         </div>
 
-        <button class="text-[#2C1258] border-[#2C1258] border-[3px] bg-transparent p-[10px_40px] rounded-[30px] my-[40px]">See all posts</button>
+        <button
+            class="text-[#2C1258] border-[#2C1258] border-[3px] bg-transparent p-[10px_40px] rounded-[30px] my-[40px]">See
+            all posts</button>
+    </div>
+
+    <div class="relative">
+        <div class="relative z-10 sec6 p-[100px] bg-[#2C1258] text-center text-white ">
+            <h2 class="text-[42px] mb-[20px]">Get in touch</h2>
+            <p>Let us know know about your requirements</p>
+        </div>
+
+        <div class="relative z-20 mt-[30px] sec6 px-[150px] bg-white ">
+            <div class="flex justify-between ">
+                <div class="p-[40px] shadow-2xl inline-block text-center w-[30%] rounded-[30px]">
+                    <img src="./images/IMAGE (81).png" alt="" class="m-auto">
+                    <h3 class="text-[22px] my-[20px]">Address</h3>
+                    <p>Express Chambers II Spaces Works, Level 5, Royapettah, Chennai – 600014</p>
+                </div>
+
+                <div class="p-[40px] shadow-2xl inline-block text-center w-[30%] rounded-[30px]">
+                    <img src="./images/IMAGE (81).png" alt="" class="m-auto">
+                    <h3 class="text-[22px] my-[20px]">Address</h3>
+                    <p>Express Chambers II Spaces Works, Level 5, Royapettah, Chennai – 600014</p>
+                </div>
+
+                <div class="p-[40px] shadow-2xl inline-block text-center w-[30%] rounded-[30px]">
+                    <img src="./images/IMAGE (81).png" alt="" class="m-auto">
+                    <h3 class="text-[22px] my-[20px]">Address</h3>
+                    <p>Express Chambers II Spaces Works, Level 5, Royapettah, Chennai – 600014</p>
+                </div>
+            </div>
+
+            <div class="flex justify-between items-center my-[50px] text-[#2C1258]">
+                <img src="./images/IMAGE (82).png" alt="">
+                <div class="w-[40%]">
+                    <h2 class="text-[42px]">Enquiry Form</h2>
+                    <p class="inline">Dont be shy, Just tell us about yourself and we’ll figure out the best option for
+                        you and your project. Dont like Filling up forms ? Mail us then</p>
+                    <span class="text-[#F4AB00]">Company@email.com</span>
+                    <div class="flex justify-between gap-[20px] my-[20px]">
+                        <input class="border-[2px] border-[#2C12581A] p-[10px_30px] rounded-[10px]" type="text"
+                            placeholder="Name">
+                        <input class="border-[2px] border-[#2C12581A] p-[10px_30px] rounded-[10px]" type="text"
+                            placeholder="Company Name">
+                    </div>
+
+                    <div class="flex justify-between gap-[20px] mb-[20px]">
+                        <input class="border-[2px] border-[#2C12581A] p-[10px_30px] rounded-[10px]" type="email"
+                            placeholder="Email">
+                        <input class="border-[2px] border-[#2C12581A] p-[10px_30px] rounded-[10px]" type="tel"
+                            placeholder="Phone">
+                    </div>
+
+                    <div class="flex justify-between gap-[20px] mb-[20px]">
+                        <input class="border-[2px] border-[#2C12581A] p-[10px_30px] rounded-[10px]" type="text"
+                            placeholder="Servica looking for">
+                        <input class="border-[2px] border-[#2C12581A] p-[10px_30px] rounded-[10px]" type="text"
+                            placeholder="Industry">
+                    </div>
+
+                    <input class="border-[2px] border-[#2C12581A] w-full p-[10px_30px] pb-[40px] rounded-[10px]" name=""
+                        id="" placeholder="Massage"></input>
+                    <button class="p-[14px_40px] bg-[#F4AB00] rounded-[30px] text-white mt-[30px]">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <hr class="bg-[#2C12581A] h-[2px] border-0">
+
+    <div class="p-[50px_150px] text-[#2C1258]">
+        <div class="flex justify-between">
+            <div>
+                <img src="./images/IMAGE (83).png" alt="">
+                <p class="w-[200px] my-[10px]">Spyro is a modern marketing landing page WP theme. that lets you build
+                    websites</p>
+            </div>
+            <div>
+                <p class="mb-[10px] text-[22px]">Quick Links</p>
+                <p class="mb-[10px]">Why SEO?</p>
+                <p class="mb-[10px]">Service</p>
+                <p class="mb-[10px]">Our Team</p>
+                <p>Our Team</p>
+            </div>
+
+            <div>
+                <p class="mb-[10px] text-[22px]">Services</p>
+                <p class="mb-[10px]">SEO & Marketing</p>
+                <p class="mb-[10px]">Email Marketing</p>
+                <p class="mb-[10px]">Mobile Marketing</p>
+                <p>Google Ads</p>
+            </div>
+
+            <div>
+                <p class="mb-[10px] text-[22px]">Quick Links</p>
+                <p class="mb-[10px]">Why SEO?</p>
+                <p class="mb-[10px]">Service</p>
+                <p class="mb-[10px]">Our Team</p>
+                <p>Our Team</p>
+            </div>
+
+            <div>
+                <p class="text-[22px]">Follow us</p>
+                <div class="gap-[20px] flex my-[20px]">
+                    <img src="./images/Frame (34).png" alt="">
+                    <img src="./images/Frame (35).png" alt="">
+                    <img src="./images/Frame (36).png" alt="">
+                </div>
+            </div>
+        </div>
+        <hr class="bg-[#2C12581A] h-[2px] border-0 my-[30px]">
+
+        <div class="flex justify-between text-[12px]">
+            <p>© SEOFlow 2021. All Rights Reserved.
+                Changelog
+                License Info</p>
+
+            <p>Powered by <span class="text-[#F4AB00]">Webflow</span>
+            </p>
+        </div>
     </div>
 
 </body>
